[build-system]
requires = ["setuptools >= 68.2.2"]
build-backend = "setuptools.build_meta"
#requires = ["hatchling"]
#build-backend = "hatchling.build"

[project]
name = "dlnpyutils"
version = "1.0.82"
dependencies = [
  "scipy",
  "numpy",
  "astropy",
]
requires-python = ">=3.9"
#requires-python = ">=3.11"
authors = [
  {name = "David Nidever", email = "dnidever@montana.edu"},
]
maintainers = [
  {name = "David Nidever", email = "dnidever@montana.edu"}
]
description = "A package of useful python utility functions"
readme = "README.rst"
keywords = ["utility", "astronomy"]
license = { file = "LICENSE" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python"
]

[project.optional-dependencies]
gui = ["PyQt5"]
cli = [
  "rich",
  "click",
]

[project.urls]
#Homepage = "https://example.com"
Documentation = "https://dlnpyutils.readthedocs.org"
Repository = "https://github.com/dnidever/dlnpyutils"
#Issues = "https://github.com/dnidever/dlnpyutils/issues"
#Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"
